service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  labels:
    app: nginx-test
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
  selector:
    app: nginx-test
