ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: ca-issuer
    kubernetes.io/ingress.class: "public"
  name: nginx-test-ingress
  namespace: default
spec:
  rules:
  - host: nginx-test.bhop.local
    http:
      paths:
      - backend:
          service:
            name: nginx-test-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx-test.bhop.local
    secretName: nginx-test-ingress-cert
